--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de exercícios feitos em aula</title>
+    <style>
+        a{
+            display: block;
+            padding: 5px;
+            margin: 10px;
+        }
+        a:visited{
+            color: blue;
+        }
+        a:hover{
+            color: brown;
+        }
+    </style>
 </head>
 <body>
     <h2>Lista de exercícios feitos em aula</h2>
-    <a href="exemplo10.html">Exemplo 10</a> <br>
-    <a href="exemplo11.html">Exemplo 11</a> <br>
-    <a href="exemplo12.html">Exemplo 12</a> <br>
-    <a href="exemplo13.html">Exemplo 13</a> <br>
-    <a href="exemplo14.html">Exemplo 14</a> <br>
-    <a href="exemplo15.html">Exemplo 15</a> <br>
-    <a href="exemplo16.html">Exemplo 16</a> <br>
+    <a href="exemplo10.html">Exemplo 10</a> 
+    <a href="exemplo11.html">Exemplo 11</a> 
+    <a href="exemplo12.html">Exemplo 12</a> 
+    <a href="exemplo13.html">Exemplo 13</a> 
+    <a href="exemplo14.html">Exemplo 14</a> 
+    <a href="exemplo15.html">Exemplo 15</a> 
+    <a href="exemplo16.html">Exemplo 16</a> 
     <a href="exemplo17.html">Exemplo 17</a>
 </body>
 </html>
